syntax = "proto3";

package sourcehub.acp;

import "amino/amino.proto";
import "google/protobuf/duration.proto";
import "google/protobuf/timestamp.proto";

option go_package = "github.com/sourcenetwork/sourcehub/x/acp/types";

// Duration models a time interval expressed either as a wallclock
// Duration interval or a number of blocks
message Duration {
  oneof duration {
    google.protobuf.Duration proto_duration = 1 [(amino.oneof_name) = "proto_duration"];
    uint64 block_count = 2 [(amino.oneof_name) = "block_count"];
  }
}

// Timestamp models an instant in time expressed as a wallclock
// Timestamp and a block height
message Timestamp {
  google.protobuf.Timestamp proto_ts = 1;
  uint64 block_height = 2;
}
